Fix layout: Adjust Home component section heights and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
 *{margin: 0px;
 font-family: Poppins ;
 }
+@media (max-width: 768px) {
+  body {
+    font-family: Poppins;
+  }
+}
