--- a/src/comp/siteComp/home.module.css
+++ b/src/comp/siteComp/home.module.css
@@ -50,3 +50,36 @@ backdrop-filter: blur(1px);
   padding-bottom:20px;
   font-family: cursive;
 }
+@media (max-width: 768px) {
+  .greting {
+    height: auto;
+    text-align: center;
+    padding: 40px 10px;
+  }
+
+  .gretingHeading {
+    font-size: 2.5rem;
+  }
+
+  .gretingMess {
+    font-size: 20px;
+    padding: 10px 5px;
+  }
+
+  .gretingBtn {
+    font-size: 14px;
+    padding: 8px 16px;
+    margin: 10px;
+  }
+
+  .chefSecHeading {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .chefSecSubHead {
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+  }
+}
